refactor: change is_viewed to view_status (#11)
* refactor: change is_viewed to view_status

* refactor: change is_viewed to view_status in postman collection
