# api/swagger.json
@@ -1189,9 +1189,9 @@
                         "in": "query"
                     },
                     {
-                        "type": "boolean",
-                        "description": "Filter by `is_viewed` (true/false)",
-                        "name": "is_viewed",
+                        "type": "string",
+                        "description": "Filter by `view_status`: not_viewed, in_progress, viewed",
+                        "name": "view_status",
                         "in": "query"
                     },
                     {
@@ -1416,6 +1416,12 @@
                     }
                 ],
                 "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/swagger.FilmResponse"
+                        }
+                    },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
@@ -1937,11 +1943,6 @@
                     "type": "boolean",
                     "example": false
                 },
-                "is_viewed": {
-                    "description": "Indicates if the user has viewed the film.",
-                    "type": "boolean",
-                    "example": true
-                },
                 "rating": {
                     "description": "Rating of the film; optional, must be between 1 and 10.",
                     "type": "number",
@@ -1983,6 +1984,16 @@
                     "maximum": 10,
                     "minimum": 1,
                     "example": 5.5
+                },
+                "view_status": {
+                    "description": "View status of the film; optional. Can be one of: \"not_viewed\", \"in_progress\", or \"viewed\".",
+                    "type": "string",
+                    "enum": [
+                        "not_viewed",
+                        "in_progress",
+                        "viewed"
+                    ],
+                    "example": "not_viewed"
                 },
                 "year": {
                     "description": "Release year of the film; optional, must be between 1888 and 2100.",
@@ -2181,10 +2192,6 @@
                     "type": "boolean",
                     "example": false
                 },
-                "is_viewed": {
-                    "type": "boolean",
-                    "example": true
-                },
                 "rating": {
                     "type": "number",
                     "example": 6.7
@@ -2204,6 +2211,10 @@
                 "user_rating": {
                     "type": "number",
                     "example": 5.5
+                },
+                "view_status": {
+                    "type": "string",
+                    "example": "not_viewed"
                 },
                 "year": {
                     "type": "integer",
